<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="editDistance">Distância</string>
    <string name="total_distance">Total em quilometros</string>
    <string name="editPrice">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="editAutonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por Litro</string>
    <string name="total_spand_title">Seu gasto total será:</string>
    <string name="total_spand">R$ 0</string>
    <string name="btn_calculate">Calcular</string>

    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>